--- a/registration.html
+++ b/registration.html
@@ -13,11 +13,11 @@
           <p class="logo">Germ Busters</p>
           <nav class="links">
             <ul>
-              <li><a href="landing.html">Home</a></li>
-              <li><a href="landing.html">About Us</a></li>
-              <li><a href="landing.html">Solutions</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">About Us</a></li>
+              <li><a href="index.html">Solutions</a></li>
               <li><a href="careers.html" target="_blank">Careers</a></li>
-              <li><a href="landing.html">Contact Us</a></li>
+              <li><a href="index.html">Contact Us</a></li>
             </ul>
           </nav>
         </div>
